resources/testcases_static_checks/tests/positive/isFrontierGuarded/a28.rls
../../../tests_common_data/rule-classification-examples/a28.rls