resources/testcases_static_checks/tests/negative/isDatalog/pseudo-grid.rls
../../../tests_common_data/rule-classification-examples/pseudo-grid.rls